--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,14 @@ dependencies = [
 packages = [{include = "einvoice", from = "src"}]
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.5"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.poetry.scripts]
+test = "pytest"
 
