--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "einvoice"
+name = "onto-doc-extraction"
 version = "0.1.0"
 description = ""
 authors = [
@@ -13,7 +13,7 @@ dependencies = [
 ]
 
 [tool.poetry]
-packages = [{include = "einvoice", from = "src"}]
+packages = [{include = "src"}]
 
 
 [tool.poetry.group.dev.dependencies]
