--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.11"
 dependencies = [
     "pymupdf (>=1.25.4,<2.0.0)",
     "pdfplumber (>=0.11.5,<0.12.0)",
+    "mypy (>=1.15.0,<2.0.0)",
 ]
 
 [tool.poetry]
